-- final test on colab: success

--- a/example/MNIST_model.ipynb
+++ b/example/MNIST_model.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "This is a demo notebook to portray the performance of out neural network library called `che3le`. For reference please check the [github repository](https://github.com/deeplearning-oop/2425-m1geniomhe-group-1).  \n",
     "\n",
-    "`che3le` is an arabic word used in the lebanese dialect to refer to a \"flame\" or \"torch\", pronounced as _\"she'le\"_"
+    "`che3le` is an arabic word used in the lebanese dialect to refer to a \"flame\" or \"torch\", pronounced as _\"shi‘le\"_"
    ]
   },
   {
@@ -81,6 +81,419 @@
    ],
    "source": [
     "%pip install git+https://github.com/deeplearning-oop/2425-m1geniomhe-group-1.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on package che3le.nn in che3le:\n",
+      "\n",
+      "NAME\n",
+      "    che3le.nn\n",
+      "\n",
+      "DESCRIPTION\n",
+      "    >>> nn package <<<\n",
+      "    -------------------\n",
+      "    core neural network module containing all the necessary classes for building a neural network\n",
+      "\n",
+      "PACKAGE CONTENTS\n",
+      "    activation\n",
+      "    linear\n",
+      "    loss\n",
+      "    module\n",
+      "    optimizer\n",
+      "    parameter\n",
+      "\n",
+      "CLASSES\n",
+      "    abc.ABC(builtins.object)\n",
+      "        che3le.nn.module.Module\n",
+      "            che3le.nn.activation.Activation\n",
+      "            che3le.nn.linear.Linear\n",
+      "            che3le.nn.loss.Loss\n",
+      "        che3le.nn.optimizer.Optimizer\n",
+      "    che3le.tensor.Tensor(builtins.object)\n",
+      "        che3le.nn.parameter.Parameter\n",
+      "\n",
+      "    class Activation(che3le.nn.module.Module)\n",
+      "     |  Base class for the activation functions.\n",
+      "     |  All activation functions should inherit from this class and implement the 'forward' method.\n",
+      "     |\n",
+      "     |  Method resolution order:\n",
+      "     |      Activation\n",
+      "     |      che3le.nn.module.Module\n",
+      "     |      abc.ABC\n",
+      "     |      builtins.object\n",
+      "     |\n",
+      "     |  Methods defined here:\n",
+      "     |\n",
+      "     |  __call__(self, x)\n",
+      "     |      Call self as a function.\n",
+      "     |\n",
+      "     |  forward(self, x)\n",
+      "     |      Abstract forward pass method must be implemented by any subclass.\n",
+      "     |      Each activation function applies its operation to the input tensor.\n",
+      "     |\n",
+      "     |  grad_compute(self, grad, op_type, x, out)\n",
+      "     |      Centralizes gradient computation for different activation functions.\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Static methods defined here:\n",
+      "     |\n",
+      "     |  backward_decorator(op_type)\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data and other attributes defined here:\n",
+      "     |\n",
+      "     |  __abstractmethods__ = frozenset({'forward'})\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Methods inherited from che3le.nn.module.Module:\n",
+      "     |\n",
+      "     |  __init__(self)\n",
+      "     |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      "     |\n",
+      "     |  __repr__(self)\n",
+      "     |      Return repr(self).\n",
+      "     |\n",
+      "     |  __setattr__(self, name, value)\n",
+      "     |      Implement setattr(self, name, value).\n",
+      "     |\n",
+      "     |  eval(self)\n",
+      "     |\n",
+      "     |  parameters(self)\n",
+      "     |      Returns a list of all the parameters of all the layers of the model\n",
+      "     |\n",
+      "     |  train(self)\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data descriptors inherited from che3le.nn.module.Module:\n",
+      "     |\n",
+      "     |  __dict__\n",
+      "     |      dictionary for instance variables\n",
+      "     |\n",
+      "     |  __weakref__\n",
+      "     |      list of weak references to the object\n",
+      "\n",
+      "    class Linear(che3le.nn.module.Module)\n",
+      "     |  Linear(input_size, output_size)\n",
+      "     |\n",
+      "     |  Method resolution order:\n",
+      "     |      Linear\n",
+      "     |      che3le.nn.module.Module\n",
+      "     |      abc.ABC\n",
+      "     |      builtins.object\n",
+      "     |\n",
+      "     |  Methods defined here:\n",
+      "     |\n",
+      "     |  __init__(self, input_size, output_size)\n",
+      "     |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      "     |\n",
+      "     |  __repr__(self)\n",
+      "     |      Return repr(self).\n",
+      "     |\n",
+      "     |  forward(self, x)\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data descriptors defined here:\n",
+      "     |\n",
+      "     |  input_size\n",
+      "     |\n",
+      "     |  output_size\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data and other attributes defined here:\n",
+      "     |\n",
+      "     |  __abstractmethods__ = frozenset()\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Methods inherited from che3le.nn.module.Module:\n",
+      "     |\n",
+      "     |  __call__(self, x)\n",
+      "     |      Call self as a function.\n",
+      "     |\n",
+      "     |  __setattr__(self, name, value)\n",
+      "     |      Implement setattr(self, name, value).\n",
+      "     |\n",
+      "     |  eval(self)\n",
+      "     |\n",
+      "     |  parameters(self)\n",
+      "     |      Returns a list of all the parameters of all the layers of the model\n",
+      "     |\n",
+      "     |  train(self)\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data descriptors inherited from che3le.nn.module.Module:\n",
+      "     |\n",
+      "     |  __dict__\n",
+      "     |      dictionary for instance variables\n",
+      "     |\n",
+      "     |  __weakref__\n",
+      "     |      list of weak references to the object\n",
+      "\n",
+      "    class Loss(che3le.nn.module.Module)\n",
+      "     |  Method resolution order:\n",
+      "     |      Loss\n",
+      "     |      che3le.nn.module.Module\n",
+      "     |      abc.ABC\n",
+      "     |      builtins.object\n",
+      "     |\n",
+      "     |  Methods defined here:\n",
+      "     |\n",
+      "     |  __call__(self, y, y_hat)\n",
+      "     |      Call self as a function.\n",
+      "     |\n",
+      "     |  __init__(self)\n",
+      "     |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      "     |\n",
+      "     |  forward(self, y, y_hat)\n",
+      "     |\n",
+      "     |  grad_compute(self, loss_type, y, y_hat)\n",
+      "     |      Centralized gradient computation for different loss functions.\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Static methods defined here:\n",
+      "     |\n",
+      "     |  backward_decorator(loss_type)\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data and other attributes defined here:\n",
+      "     |\n",
+      "     |  __abstractmethods__ = frozenset({'forward'})\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Methods inherited from che3le.nn.module.Module:\n",
+      "     |\n",
+      "     |  __repr__(self)\n",
+      "     |      Return repr(self).\n",
+      "     |\n",
+      "     |  __setattr__(self, name, value)\n",
+      "     |      Implement setattr(self, name, value).\n",
+      "     |\n",
+      "     |  eval(self)\n",
+      "     |\n",
+      "     |  parameters(self)\n",
+      "     |      Returns a list of all the parameters of all the layers of the model\n",
+      "     |\n",
+      "     |  train(self)\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data descriptors inherited from che3le.nn.module.Module:\n",
+      "     |\n",
+      "     |  __dict__\n",
+      "     |      dictionary for instance variables\n",
+      "     |\n",
+      "     |  __weakref__\n",
+      "     |      list of weak references to the object\n",
+      "\n",
+      "    class Module(abc.ABC)\n",
+      "     |  Method resolution order:\n",
+      "     |      Module\n",
+      "     |      abc.ABC\n",
+      "     |      builtins.object\n",
+      "     |\n",
+      "     |  Methods defined here:\n",
+      "     |\n",
+      "     |  __call__(self, x)\n",
+      "     |      Call self as a function.\n",
+      "     |\n",
+      "     |  __init__(self)\n",
+      "     |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      "     |\n",
+      "     |  __repr__(self)\n",
+      "     |      Return repr(self).\n",
+      "     |\n",
+      "     |  __setattr__(self, name, value)\n",
+      "     |      Implement setattr(self, name, value).\n",
+      "     |\n",
+      "     |  eval(self)\n",
+      "     |\n",
+      "     |  forward(self, x)\n",
+      "     |\n",
+      "     |  parameters(self)\n",
+      "     |      Returns a list of all the parameters of all the layers of the model\n",
+      "     |\n",
+      "     |  train(self)\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data descriptors defined here:\n",
+      "     |\n",
+      "     |  __dict__\n",
+      "     |      dictionary for instance variables\n",
+      "     |\n",
+      "     |  __weakref__\n",
+      "     |      list of weak references to the object\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data and other attributes defined here:\n",
+      "     |\n",
+      "     |  __abstractmethods__ = frozenset({'forward'})\n",
+      "\n",
+      "    class Optimizer(abc.ABC)\n",
+      "     |  Optimizer(parameters, lr=0.01, momentum=0)\n",
+      "     |\n",
+      "     |  Method resolution order:\n",
+      "     |      Optimizer\n",
+      "     |      abc.ABC\n",
+      "     |      builtins.object\n",
+      "     |\n",
+      "     |  Methods defined here:\n",
+      "     |\n",
+      "     |  __init__(self, parameters, lr=0.01, momentum=0)\n",
+      "     |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      "     |\n",
+      "     |  step(self)\n",
+      "     |\n",
+      "     |  zero_grad(self)\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data descriptors defined here:\n",
+      "     |\n",
+      "     |  __dict__\n",
+      "     |      dictionary for instance variables\n",
+      "     |\n",
+      "     |  __weakref__\n",
+      "     |      list of weak references to the object\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data and other attributes defined here:\n",
+      "     |\n",
+      "     |  __abstractmethods__ = frozenset({'step'})\n",
+      "\n",
+      "    class Parameter(che3le.tensor.Tensor)\n",
+      "     |  Parameter(data)\n",
+      "     |\n",
+      "     |  Method resolution order:\n",
+      "     |      Parameter\n",
+      "     |      che3le.tensor.Tensor\n",
+      "     |      builtins.object\n",
+      "     |\n",
+      "     |  Methods defined here:\n",
+      "     |\n",
+      "     |  __init__(self, data)\n",
+      "     |      Tesnor constructor:\n",
+      "     |\n",
+      "     |      * respecting encapsulation (private attributes + getters and setters)\n",
+      "     |      * handling data type conversion through firstly assigning dtype and handling the rest in __setattr__\n",
+      "     |      * default values for requires_grad and is_leaf are set\n",
+      "     |\n",
+      "     |      Note: default dtype will be float32 (unlike torch which is an int)\n",
+      "     |          and that's to avoid possibel errors if requires_grad is set to True\n",
+      "     |\n",
+      "     |      e.g. on error that should be given when type is int and requires_grad is True:\n",
+      "     |\n",
+      "     |      ```python\n",
+      "     |      >>> a=torch.tensor([1,2,3], requires_grad=True)\n",
+      "     |      RuntimeError: Only Tensors of floating point and complex dtype can require gradients\n",
+      "     |      ```\n",
+      "     |\n",
+      "     |  __repr__(self)\n",
+      "     |      Return repr(self).\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Methods inherited from che3le.tensor.Tensor:\n",
+      "     |\n",
+      "     |  T(self)\n",
+      "     |\n",
+      "     |  __add__ = wrapper(self, other)\n",
+      "     |\n",
+      "     |  __getitem__(self, idx)\n",
+      "     |      important for dataset and dataloaders\n",
+      "     |\n",
+      "     |  __len__(self)\n",
+      "     |\n",
+      "     |  __matmul__ = wrapper(self, other)\n",
+      "     |\n",
+      "     |  __mul__ = wrapper(self, other)\n",
+      "     |\n",
+      "     |  __neg__ = wrapper(self, other)\n",
+      "     |\n",
+      "     |  __pow__ = wrapper(self, other)\n",
+      "     |\n",
+      "     |  __setattr__(self, name, value)\n",
+      "     |      Implement setattr(self, name, value).\n",
+      "     |\n",
+      "     |  __sub__ = wrapper(self, other)\n",
+      "     |\n",
+      "     |  __truediv__ = wrapper(self, other)\n",
+      "     |\n",
+      "     |  backward(self)\n",
+      "     |\n",
+      "     |  backward_decorator(op_type)\n",
+      "     |\n",
+      "     |  detach(self)\n",
+      "     |\n",
+      "     |  draw_graph(self, graph_name='computation_graph')\n",
+      "     |      Drawing the computation graph for the current tensor.\n",
+      "     |\n",
+      "     |      Parameters:\n",
+      "     |      - graph_name (str): The name of the graph visualization file.\n",
+      "     |\n",
+      "     |  flatten_batch(self)\n",
+      "     |      given that a tenosr is a batch of length batch_size, it'll flatten the dimensions while conserving the batch dimension (and transpsoing to match pytorch's behavior)\n",
+      "     |\n",
+      "     |      e.g., it will take (batch_size,1,28,28) and return (784, batch_size)\n",
+      "     |\n",
+      "     |      <!> used for testing while batch training images\n",
+      "     |\n",
+      "     |  grad_compute(self, grad, op_type, other=None)\n",
+      "     |\n",
+      "     |  mean = wrapper(self, other)\n",
+      "     |\n",
+      "     |  ndim(self)\n",
+      "     |\n",
+      "     |  sum = wrapper(self, other)\n",
+      "     |\n",
+      "     |  view(self, *args)\n",
+      "     |      same as torch's functionality, it collapses all dimensions into 1\n",
+      "     |\n",
+      "     |      <!> to be tested sperately on example tensors\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Readonly properties inherited from che3le.tensor.Tensor:\n",
+      "     |\n",
+      "     |  shape\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data descriptors inherited from che3le.tensor.Tensor:\n",
+      "     |\n",
+      "     |  __dict__\n",
+      "     |      dictionary for instance variables\n",
+      "     |\n",
+      "     |  __weakref__\n",
+      "     |      list of weak references to the object\n",
+      "     |\n",
+      "     |  data\n",
+      "     |\n",
+      "     |  dtype\n",
+      "     |      # direct access from data,\n",
+      "     |      # since this getter can only be called after instanciating\n",
+      "     |      # we will surely have data assigned\n",
+      "     |      # ensures dynamic real-time access to data type\n",
+      "     |      # most importantly: returns a DataType object\n",
+      "     |\n",
+      "     |  is_leaf\n",
+      "     |\n",
+      "     |  requires_grad\n",
+      "\n",
+      "DATA\n",
+      "    __all__ = ['Activation', 'Linear', 'Loss', 'Module', 'Optimizer', 'Par...\n",
+      "\n",
+      "FILE\n",
+      "    /home/raysas/miniconda3/lib/python3.12/site-packages/che3le/nn/__init__.py\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import che3le\n",
+    "help(che3le.nn)"
    ]
   },
   {
